# QWACR

./: .gitignore  HARDWARE_TESTING_GUIDE.md  PHASE2_NAV2_TESTING_PLAN.md  PI_ACCESS_POINT_SETUP.md  PROJECT_SCOPE_AND_PLAN.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  ROBOT_CONTROL_TEST_GUIDE.md  ROBUST_LAUNCH_SCRIPTS_GUIDE.md  SESSION_SUMMARY.md  UPLOAD_INSTRUCTIONS.md  ap-network-setup.service  configure_ap_ip.sh  pi_setup.sh  ros2_install_jazzy.sh  send_motor_command.sh  test_nonzero_commands.py
QWACR_Project_Status/: BASIC_LAUNCH_PROCEDURES.md  BATTERY_CONTAINER_MISSION_PLAN.md  Final_testing_and_integration.md  Fire_Sensor_Integration.md  HALOW_VIDEO_STREAMING_GUIDE.md  IMU_INTEGRATION_GUIDE.md  LORA_HALOW_INTEGRATION_PLAN.md  MISSION_PLAN_AND_OPERATOR_GUI.md  NAVIGATION_AUTONOMY_TESTING_GUIDE.md  PHASE1_SUMMARY.md  PROJECT_SCOPE_AND_PLAN.md  PROJECT_STATUS.md  REMAINING_SCOPE_MAR_APR_2026.md  RPI5_SYSTEM_SETUP_AND_DEPENDENCIES.md  SENSOR_FUSION_EKF_TESTING_GUIDE.md
qwacr_arduino/: CHANGES.md  ENCODER_METHODS.md  INSTALL.md  PIN_ASSIGNMENT.md  PROJECT_STATUS.md  README.md  motor_control.h  quadrature_decoder.h  qwacr_main.ino  serial_protocol.h  test_serial.py
qwacr_arduino/qwacr_main/: motor_control.h  qwacr_main.ino  serial_protocol.h  test_request_response.py
qwacr_arduino/tests/: test_encoders_basic.ino  test_motors_open_loop.ino  test_slp_pins.ino
qwacr_interfaces/src/pi_interface_ard/: package.xml  setup.cfg  setup.py
qwacr_interfaces/src/pi_interface_ard/pi_interface_ard/: interface_node.py
qwacr_ws/: README.md  analyze_imu_bias.py  frames_2026-01-21_15.13.39.gv  frames_2026-01-21_15.14.27.gv  frames_2026-01-21_16.20.52.gv  robot_control_quickstart.sh  test_motors_simple.sh
qwacr_ws/src/: .gitkeep
qwacr_ws/src/aurora_ros/: README.md  README.zh-CN.md
qwacr_ws/src/mega_diff_drive_control/: CMakeLists.txt  mega_diff_drive_hardware.xml  package.xml
qwacr_ws/src/mega_diff_drive_control/include/mega_diff_drive_control/: mega_diff_drive_hardware.hpp
qwacr_ws/src/mega_diff_drive_control/launch/: motors_only.launch.py
qwacr_ws/src/mega_diff_drive_control/scripts/: launch_motors_robust.sh
qwacr_ws/src/mega_diff_drive_control/src/: mega_diff_drive_hardware.cpp
qwacr_ws/src/qwacr_build/: CMakeLists.txt  package.xml
qwacr_ws/src/qwacr_build/config/: diff_drive_controller.yaml
qwacr_ws/src/qwacr_build/launch/: display.launch.py  gazebo_sim.launch.py  qwacr_display.rviz
qwacr_ws/src/qwacr_build/models/: qwacr_gazebo.sdf
qwacr_ws/src/qwacr_build/scripts/: README.md  arduino_sim.py  launch_robust.sh  prepare_serial.sh  twist_to_stamped.py
qwacr_ws/src/qwacr_build/urdf/: qwacr.urdf.xacro
qwacr_ws/src/qwacr_build/worlds/: simple.sdf
qwacr_ws/src/qwacr_comms/: package.xml  setup.cfg  setup.py
qwacr_ws/src/qwacr_comms/config/: halow_config.yaml  halow_left_config.yaml  lora_config.yaml
qwacr_ws/src/qwacr_comms/esp32_firmware/: README.md
qwacr_ws/src/qwacr_comms/esp32_firmware/base_station/: README.md  base_station.ino
qwacr_ws/src/qwacr_comms/esp32_firmware/common/: README.md  lora_bridge_common.h
qwacr_ws/src/qwacr_comms/esp32_firmware/robot_side/: README.md  robot_side.ino
qwacr_ws/src/qwacr_comms/esp32_firmware/test_serial/: test_serial.ino
qwacr_ws/src/qwacr_comms/launch/: base_station.launch.py  halow_left_video.launch.py  halow_video.launch.py  robot_comms.launch.py
qwacr_ws/src/qwacr_comms/qwacr_comms/: __init__.py  command_mux.py  lora_bridge.py  lora_protocol.py  mission_manager.py  operator_console.py  telemetry_publisher.py  video_publisher.py
qwacr_ws/src/qwacr_fire_sensors/: CMakeLists.txt  package.xml
qwacr_ws/src/qwacr_fire_sensors/launch/: fire_sensors.launch.py
qwacr_ws/src/qwacr_fire_sensors/qwacr_fire_sensors/: dgs2_decode.py
qwacr_ws/src/qwacr_fire_sensors/scripts/: dgs2_co_node.py  dgs2_h2_node.py  mlx90640_node.py  sen54_node.py
qwacr_ws/src/qwacr_gps/: README.md  package.xml  setup.cfg  setup.py
qwacr_ws/src/qwacr_gps/config/: gps_params.yaml
qwacr_ws/src/qwacr_gps/launch/: gps.launch.py
qwacr_ws/src/qwacr_gps/qwacr_gps/: __init__.py  gps_driver_node.py
qwacr_ws/src/qwacr_gps/resource/: qwacr_gps
qwacr_ws/src/qwacr_imu/: package.xml  setup.py
qwacr_ws/src/qwacr_imu/qwacr_imu/: sparkfun_imu_node.py
qwacr_ws/src/qwacr_lidar/: CMakeLists.txt  README.md  package.xml
qwacr_ws/src/qwacr_lidar/config/: aurora_params.yaml
qwacr_ws/src/qwacr_lidar/launch/: aurora.launch.py
qwacr_ws/src/qwacr_lidar/rviz/: aurora.rviz
qwacr_ws/src/qwacr_navigation/: README.md  package.xml  setup.cfg  setup.py
qwacr_ws/src/qwacr_navigation/config/: example_waypoints.json  nav2_params.yaml  qwacr_outdoor_nav.xml
qwacr_ws/src/qwacr_navigation/launch/: rviz.launch.py  (+6 more)
qwacr_ws/src/qwacr_operator_gui/: package.xml  setup.cfg  setup.py
qwacr_ws/src/qwacr_operator_gui/qwacr_operator_gui/: gui.py
src/mega_diff_drive_control/: CMakeLists.txt  package.xml
src/mega_diff_drive_control/include/mega_diff_drive_control/: mega_diff_drive_hardware.hpp
src/mega_diff_drive_control/src/: mega_diff_drive_hardware.cpp  mega_diff_drive_hardware_minimal.cpp
src/qwacr_build/: CMakeLists.txt
src/qwacr_build/config/: diff_drive_controller.yaml
src/qwacr_build/launch/: display.launch.py
src/qwacr_build/scripts/: activate_controllers.py  activate_controllers_custom_timeout.py  arduino_sim.py  serial_sim.py
src/qwacr_build/urdf/: qwacr.urdf  qwacr.urdf.xacro
tests/: README.md  continuous_motor_test.py  dgs2_command_test.py  dgs2_sniff.py  hardware_full_test.sh  interrupt_test.ino  lora_ping_base.sh  lora_ping_robot.sh  mlx90640_mux_test.py  monitor_esp32.py  sen54_mux_test.py  test_all_motors.py  test_debug.py  test_fl_diagnostic.py  test_fl_hardware.ino  test_motor_command.py  test_pid_combined.py  test_pid_fast.py  test_pid_reverse_fast.py  test_pid_varying.py  test_raw_bytes.py  test_request_response_fixed.py  test_reverse.py  test_right_motors.py  test_simple_repeat.py  test_single_command.py  uart2_loopback.py  uart3_loopback.py  verify_joint_states.sh  verify_lora_bridge.sh  verify_lora_loopback.sh
(+20 files in other folders)
