<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pi_interface_ard</name>
  <version>0.0.0</version>
  <description>Build an interface between Raspberry Pi and Arduino via serial communication</description>
  <maintainer email="kyle@todo.todo">kyle</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <build_type>rclpy</build_type>
    <depend>Py3 pyserial</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    
  </export>
</package>
