<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mega_diff_drive_control</name>
  <version>0.0.0</version>
  <description>Ros2 control, YAML, hardware_interfaces, diff_Drive_controller</description>
  <maintainer email="ksanford2021@fau.edu">kyle</maintainer>
  <license>Apache - 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>ros2_control</depend>
  <depend>diff_drive_controller</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <!-- <build_depend>libserial</exec_depend> -->


  <!-- <exec_depend>libserial</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <hardware_interface plugin="${prefix}/mega_diff_drive_hardware.xml"/>
  </export>
</package>
