<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qwacr_build</name>
  <version>0.0.0</version>
  <description>URDF for qwacr</description>
  <maintainer email="ksanford2021@fau.edu">kyle</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch_ros</exec_depend> 
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>joint_state_publisher</exec_depend> -->
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>  
  
  <depend>rclcpp</depend>
  <depend>mega_diff_drive_control</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
