<?xml version="1.0"?>
<package format="3">
  <name>qwacr_operator_gui</name>
  <version>0.1.0</version>
  <description>Qt-based operator GUI for QWACR base-station.</description>
  <maintainer email="kyle@example.com">kyle</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
